mbank-cli (1.2) UNRELEASED; urgency=low

  Security improvements:

  * SSLv2 and SSLv3 support has been disabled.
    The TLS protocol is now always used.

 -- Jakub Wilk <jwilk@jwilk.net>  Wed, 09 Jul 2014 14:24:07 +0200

mbank-cli (1.1.1) unstable; urgency=low

  Minor bug fixes:

  * In mbank-cli 1.0, the “configure” command would issue a warning about
    uninitialized value when it couldn't guess the language. This bug is now
    fixed.

 -- Jakub Wilk <jwilk@jwilk.net>  Thu, 03 Jul 2014 22:38:43 +0200

mbank-cli (1.1) unstable; urgency=low

  New features:

  * It is now possible to export history as CSV, HTML or PDF.

  Bug fixes and other improvements:

  * The --version option now also prints versions of some Perl modules
    (LWP::UserAgent, LWP::Protocol::https, IO::Socket::SSL Net::SSLeay)
    and OpenSSL.

  * mbank-cli 1.0, unlike the previous versions, didn't save cookies if the
    program failed (e.g., because of an HTTP error).
    This was undesirable, and it is now fixed.

  * The “configure” command didn't expand tilde when creating directories for
    session cookie stores. This bug is now fixed.
    Be careful when removing stray “~” directories:
    $ rm -rf ./~  # correct
    $ rm -rf '~'  # also correct
    $ rm -rf ~    # WRONG! removes $HOME

 -- Jakub Wilk <jwilk@jwilk.net>  Tue, 01 Jul 2014 13:07:42 +0200

mbank-cli (1.0) unstable; urgency=low

  This version of mbank-cli has been rewritten (almost) from scratch.
  It uses https://online.mbank.pl/ (or https://online.mbank.cz/, or
  https://online.mbank.sk) as the web backend.

  The new code is available under the permissive Expat (a.k.a. MIT) license.

  The old version of mbank-cli, which uses the old interface at
  https://www.mbank.com.pl/, is still available in the legacy/ subdirectory,
  but it is no longer developed.

  Changes to the user interface:

  * The default configuration file location has changed: it's now it