@@ -38,6 +38,10 @@ END {
     }
 }
 
+# cwd in @INC is harmful:
+# http://www.nntp.perl.org/group/perl.perl5.porters/2010/08/msg162729.html
+no lib '.';
+
 # core modules:
 use Encode ();
 use English qw(-no_match_vars);
