@@ -25,6 +25,8 @@ use v5.10;
 use strict;
 use warnings;
 
+no lib '.';
+
 use English qw(-no_match_vars);
 use File::Basename ();
 use Pod::Simple::XHTML ();
